# openpylib

./: Readme.md  settings.gradle
app/: build.gradle
openpylib/src/main/cpp/: CMakeLists.txt  main.cpp
openpylib/src/main/cpp/include/: globals.hpp
openpylib/src/main/cpp/includes/arm64-v8a/: Python-ast.h  Python.h  abstract.h  accu.h  asdl.h  ast.h  boolobject.h  bytearrayobject.h  bytes_methods.h  bytesobject.h  cellobject.h  ceval.h  classobject.h  code.h  codecs.h  compile.h  complexobject.h  context.h  descrobject.h  dictobject.h  dtoa.h  eval.h  fileobject.h  fileutils.h  floatobject.h  frameobject.h  funcobject.h  genobject.h  import.h  intrcheck.h  iterobject.h  listobject.h  longintrepr.h  longobject.h  memoryobject.h  methodobject.h  modsupport.h  moduleobject.h  namespaceobject.h  node.h  (+41 more)
openpylib/src/main/cpp/includes/x86_64/: Python-ast.h  Python.h  abstract.h  asdl.h  ast.h  boolobject.h  bytesobject.h  cellobject.h  ceval.h  classobject.h  code.h  codecs.h  compile.h  context.h  datetime.h  descrobject.h  dictobject.h  dynamic_annotations.h  enumobject.h  eval.h  fileobject.h  fileutils.h  floatobject.h  frameobject.h  funcobject.h  genobject.h  grammar.h  import.h  interpreteridobject.h  intrcheck.h  iterobject.h  listobject.h  longintrepr.h  longobject.h  memoryobject.h  methodobject.h  modsupport.h  moduleobject.h  namespaceobject.h  node.h  (+43 more)
openpylib/src/main/cpp/python/: Py.cpp
openpylib/src/main/cpp/sources/: globals.cpp
openpylib/src/main/cpp/sources/abstracts/: PyCallable.cpp  PyIter.cpp  PyMapping.cpp  PyNumber.cpp  PySequence.cpp
(+113 files in other folders)
