CMAKE_MINIMUM_REQUIRED(VERSION 3.4.1)

LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../jniLibs/${CMAKE_ANDROID_ARCH_ABI})
INCLUDE_DIRECTORIES(includes/${CMAKE_ANDROID_ARCH_ABI})
INCLUDE_DIRECTORIES(include)

FIND_LIBRARY(log-lib log)
FILE(GLOB_RECURSE SRC_LIST sources/*.cpp)
# AUX_SOURCE_DIRECTORY(sources/abstracts SRC_LIST)
# AUX_SOURCE_DIRECTORY(sources/objects/basic SRC_LIST)
# AUX_SOURCE_DIRECTORY(sources/objects/sequence SRC_LIST)
# AUX_SOURCE_DIRECTORY(sources/python SRC_LIST)
ADD_LIBRARY(openpylib SHARED ${SRC_LIST})
TARGET_LINK_LIBRARIES(openpylib python3.8 ${log-lib})
